--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/datetimepicker": "^2.4.2",
     "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/segmented-control": "^2.1.1",
     "@react-native-community/slider": "^3.0.0",
     "@react-navigation/native": "^5.5.1",
     "@react-navigation/stack": "^5.4.2",
